se enlazo mural con resto de paginas y vicebersae

--- a/Mural.html
+++ b/Mural.html
@@ -45,9 +45,25 @@
             font-size: 1.1em;
             text-align: center;
         }
+        nav {
+            background: #23272a;
+            padding: 16px 0;
+            text-align: center;
+        }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 24px;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
+    <nav>
+        <a href="index.html">Inicio</a>
+        <a href="Mural.html">Mural Gamer</a>
+        <a href="Administradores.html">Administradores</a>
+    </nav>
     <h1>Mural Gamer 🎮</h1>
     <div class="mural-container">
         <!-- Ejemplo de foto graciosa -->
