--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="Administradores.html">Administradores</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Mural.html">Mural Gamer</a>
+                    </li>
                 </ul>
             </div>
         </div>
