--- a/Administradores.html
+++ b/Administradores.html
@@ -26,6 +26,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#unete">Únete</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Mural.html">Mural Gamer</a>
+                    </li>
                 </ul>
             </div>
         </div>
