--- a/Mural.html
+++ b/Mural.html
@@ -68,7 +68,7 @@
     <div class="mural-container">
         <!-- Ejemplo de foto graciosa -->
         <div class="mural-item">
-            <img src="https://i.imgur.com/4M34hi2.jpg" alt="Foto graciosa gamer">
+            <img src="css/img/xD1.jpg" alt="Foto graciosa gamer">
             <div class="caption">Cuando tu compa dice que es pro y muere primero 😂</div>
         </div>
         <!-- Ejemplo de clip gracioso -->
